[project]
name = "llm-benchx"
version = "0.1.0"
description = "LLM-BenchX is a lightweight and easy-to-use benchmarking tool for Large Language Models (LLMs)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.64.0",
    "ruff>=0.9.7",
    "tabulate>=0.9.0",
]
